links of webpages are added in index.html file.

--- a/recipes/egg_kulambu.html
+++ b/recipes/egg_kulambu.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Egg Kulambu</h1>
         <a href="../index.html">Home</a>
-        <img src="https://www.allrecipes.com/thmb/IbH7YKOlSDUQVCI9GdO2Qwwg_Ig=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2621386-93d3b61af1e84e0a839e36ec5c4ce650.jpg" alt=" Indian creamy chicken curry">
+        <img src="https://www.allrecipes.com/thmb/IbH7YKOlSDUQVCI9GdO2Qwwg_Ig=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2621386-93d3b61af1e84e0a839e36ec5c4ce650.jpg" alt=" Indian Egg Kulambu">
         <h2>Description</h2>
         <p>Kulambu is a Tamililan spicy stew-like preparation. The main flavours are from tamarind and jaggery or sugar. This is a delicious kulambu using boiled eggs. You can easily use fish or crab instead of the eggs.</p>
         <h2>Ingredients</h2>
