--- a/recipes/indian_chicken_curry.html
+++ b/recipes/indian_chicken_curry.html
@@ -9,9 +9,9 @@
         <h1>Indian Ckicken Curry</h1>
         <a href="../index.html">Home</a>
         <img src="https://www.allrecipes.com/thmb/4xmE8lu1TSg893xk93wk20AKJcs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/46822-indian-chicken-curry-ii-DDMFS-4x3-39160aaa95674ee395b9d4609e3b0988.jpg" alt=" Indian creamy chicken curry">
-        <h2>What Is Indian Chicken Curry?</h2>
+        <h2>Description</h2>
         <p>Chicken curry from the Indian subcontinent typically features chicken stewed in a tomato-based sauce seasoned with aromatic spices. This recipe, like many others, calls for curry powder (a spice blend made with coriander, turmeric, cumin, and chili powder).</p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li>3 tablespoons olive oil</li>
             <li>1 small onion, chopped</li>
@@ -30,7 +30,7 @@
             <li>½ lemon, juiced</li>
             <li>½ teaspoon cayenne pepper</li>
         </ul>
-        <h3>Steps</h3>
+        <h2>Steps</h2>
         <ol>
             <li>Heat olive oil in a skillet over medium heat. Sauté onion until lightly browned.</li>
             <li>Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar, and salt. Continue stirring for 2 minutes.</li>
