Add style to Odin-Recipes project. Added some basic tyle to thid project. Added dtyel to the h1, link, image, h2, ul, ol.

--- a/recipes/egg_kulambu.html
+++ b/recipes/egg_kulambu.html
@@ -4,15 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Egg Kulambu</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Egg Kulambu</h1>
-        <a href="../index.html">Home</a>
-        <img src="https://www.allrecipes.com/thmb/IbH7YKOlSDUQVCI9GdO2Qwwg_Ig=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2621386-93d3b61af1e84e0a839e36ec5c4ce650.jpg" alt=" Indian Egg Kulambu">
-        <h2>Description</h2>
-        <p>Kulambu is a Tamililan spicy stew-like preparation. The main flavours are from tamarind and jaggery or sugar. This is a delicious kulambu using boiled eggs. You can easily use fish or crab instead of the eggs.</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h1 id="headering">Egg Kulambu</h1>
+        <a href="../index.html" id="home">Home</a>
+        <br>
+        <img src="https://www.allrecipes.com/thmb/IbH7YKOlSDUQVCI9GdO2Qwwg_Ig=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2621386-93d3b61af1e84e0a839e36ec5c4ce650.jpg" alt=" Indian Egg Kulambu" id="image">
+        <h2 class="sub-heading">Description</h2>
+        <p class="content">Kulambu is a Tamililan spicy stew-like preparation. The main flavours are from tamarind and jaggery or sugar. This is a delicious kulambu using boiled eggs. You can easily use fish or crab instead of the eggs.</p>
+        <h2 class="sub-heading">Ingredients</h2>
+        <ul class="content">
             <li>8 eggs</li>
             <li>½ teaspoon fennel seeds</li>
             <li>½ teaspoon cumin seeds</li>
@@ -32,8 +34,8 @@
             <li>salt to taste</li>
             <li>¼ cup chopped fresh cilantro leaves</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading">Steps</h2>
+        <ol class="content">
             <li>Place the eggs into a saucepan in a single layer and fill with water to cover by 1 inch. Cover the saucepan and bring the water to a boil; remove from the heat and let the eggs stand in the hot water for 15 minutes; drain. Run cold water over the eggs to cool completely; peel. Cut 4 slits into each of the eggs.</li>
             <li>Roast the fennel seeds, cumin seeds, and peppercorns in a small skillet over medium heat until very fragrant; grind into powder. Set aside.</li>
             <li>Heat the oil in a large skillet or kadhai over medium heat. Stir the turmeric into the oil. Quickly fry the eggs in the hot oil on all sides, about 2 minutes. Remove and set aside.</li>
