--- a/recipes/indian_chicken_curry.html
+++ b/recipes/indian_chicken_curry.html
@@ -4,15 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Indian Ckicken Curry</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Indian Ckicken Curry</h1>
-        <a href="../index.html">Home</a>
-        <img src="https://www.allrecipes.com/thmb/4xmE8lu1TSg893xk93wk20AKJcs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/46822-indian-chicken-curry-ii-DDMFS-4x3-39160aaa95674ee395b9d4609e3b0988.jpg" alt=" Indian creamy chicken curry">
-        <h2>Description</h2>
-        <p>Chicken curry from the Indian subcontinent typically features chicken stewed in a tomato-based sauce seasoned with aromatic spices. This recipe, like many others, calls for curry powder (a spice blend made with coriander, turmeric, cumin, and chili powder).</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h1 id="headering">Indian Ckicken Curry</h1>
+        <a href="../index.html" id="home">Home</a>
+        <br>
+        <img src="https://www.allrecipes.com/thmb/4xmE8lu1TSg893xk93wk20AKJcs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/46822-indian-chicken-curry-ii-DDMFS-4x3-39160aaa95674ee395b9d4609e3b0988.jpg" alt=" Indian creamy chicken curry" id="image">
+        <h2 class="sub-heading">Description</h2>
+        <p class="content">Chicken curry from the Indian subcontinent typically features chicken stewed in a tomato-based sauce seasoned with aromatic spices. This recipe, like many others, calls for curry powder (a spice blend made with coriander, turmeric, cumin, and chili powder).</p>
+        <h2 class="sub-heading">Ingredients</h2>
+        <ul class="content">
             <li>3 tablespoons olive oil</li>
             <li>1 small onion, chopped</li>
             <li>2 cloves garlic, minced</li>
@@ -30,8 +32,8 @@
             <li>½ lemon, juiced</li>
             <li>½ teaspoon cayenne pepper</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading">Steps</h2>
+        <ol class="content">
             <li>Heat olive oil in a skillet over medium heat. Sauté onion until lightly browned.</li>
             <li>Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar, and salt. Continue stirring for 2 minutes.</li>
             <li>Add chicken pieces, tomato paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.</li>
