--- a/recipes/peri_peri_chicken.html
+++ b/recipes/peri_peri_chicken.html
@@ -4,15 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Peri Peri Chicken</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Peri Peri Chicken</h1>
-        <a href="../index.html">Home</a>
-        <img src="https://www.allrecipes.com/thmb/rVVKHczPYgtlnwknNXvc_O8Cq50=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7507145PeriPeriChickenChefJohn4x3-6eed97091b5e485592fac34fcb77d501.jpg" alt="Peri Peri Chicken">
-        <h2>Description</h2>
-        <p>The peri peri chicken is made with my take on African peri peri sauce using fresh and dried chiles. The marinade is incredibly flavorful and gives the chicken a beautiful color as well</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h1 id="headering">Peri Peri Chicken</h1>
+        <a href="../index.html" id="home">Home</a>
+        <br>
+        <img src="https://www.allrecipes.com/thmb/rVVKHczPYgtlnwknNXvc_O8Cq50=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7507145PeriPeriChickenChefJohn4x3-6eed97091b5e485592fac34fcb77d501.jpg" alt="Peri Peri Chicken" id="image">
+        <h2 class="sub-heading">Description</h2>
+        <p class="content">The peri peri chicken is made with my take on African peri peri sauce using fresh and dried chiles. The marinade is incredibly flavorful and gives the chicken a beautiful color as well</p>
+        <h2 class="sub-heading">Ingredients</h2>
+        <ul class="content">
             <li>6 cloves garlic</li>
             <li>4 red Fresno chili peppers, seeded</li>
             <li>1 habanero pepper, seeded</li>
@@ -30,8 +32,8 @@
             <li>4 chicken leg/thigh quarters</li>
             <li>kosher salt to taste to season chicken</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading">Steps</h2>
+        <ol class="content">
             <li>Combine garlic, Fresno chili peppers, habanero pepper, bell pepper, smoked paprika, thyme, kosher salt, black pepper, cayenne pepper, sugar, and onion powder in a blender. Pour in olive oil, sherry vinegar, and lemon juice; blend on high until marinade is completely smooth.</li>
             <li>Pour 3/4 of the marinade into resealable plastic bag set in a bowl. Reserve the rest for serving on the side.</li>
             <li>Make 3 or 4 shallow cuts into the skin side of the chicken quarters. This will allow the sauce to penetrate the skin during marination. Season chicken on both sides with kosher salt, and transfer into the bag. Seal the top, and toss and massage the chicken until all pieces are completely and evenly coated with the marinade. Allow to marinate in the refrigerator for 8 to 24 hours.</li>
