--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/indian_chicken_curry.html">Indian Ckicken Curry</a></li>
-            <li><a href="recipes/egg_kulambu.html">Egg Kulambu</a></li>
-            <li><a href="recipes/peri_peri_chicken.html">Peri Peri Chicken</a></li>
+        <ul id="recipes">
+            <li class="recipe"><a href="recipes/indian_chicken_curry.html">Indian Ckicken Curry</a></li>
+            <li class="recipe"><a href="recipes/egg_kulambu.html">Egg Kulambu</a></li>
+            <li class="recipe"><a href="recipes/peri_peri_chicken.html">Peri Peri Chicken</a></li>
         </ul>
     </body>
 </html>
